@@ -212,6 +212,8 @@ AC_CHECK_HEADERS([ddk/hidsdi.h],,,[#include <windows.h>
 AC_C_CONST
 AC_HEADER_TIME
 
+AC_CHECK_HEADERS([netinet/in.h])
+
 # WinSock2
 AC_CHECK_LIB([ws2_32], [puts])
 
